--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,59 @@
 {% endblock page_title %}
 
 {% block container %}
-    <h1>{% trans 'Test Task Recipes' %}</h1>
+    <div class="container-fluid">
+        <h1 class="page-header text-center">{% trans 'Test Task Recipes' %}</h1><br><br>
 
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-center">{% trans 'List of Recipes' %}</h2>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>{% trans 'Recipe Name' %}</th>
+                            <th>{% trans 'Add product to recipe' %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for recipe in recipes %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ recipe }}</td>
+                            <td><a href="{% url 'add_product_to_recipe' recipe.pk %}">
+                                {% trans 'Change Recipe' %}</a></td>
+                        </tr>
+                   {% endfor %}
+                    </tbody>
+
+
+                </table>
+            </div>
+            <div class="col-md-6">
+                <h2 class="text-center">{% trans 'List of Ingredients' %}</h2>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>{% trans 'Recipe Name' %}</th>
+                            <th>{% trans 'Add product to recipe' %}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for ingredient in ingredients %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ ingredient.name }}</td>
+                            <td><a href="">{% trans 'Show Recipes Without This Product' %}</a></td>
+                        </tr>
+                   {% endfor %}
+                    </tbody>
+
+
+                </table>
+
+            </div>
+        </div>
+    </div>
 {% endblock container %}
 
